--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
           content="Web site created using create-react-app"
   />
 
-  <title>30 Days Of React App</title>
+  <title>React App</title>
   <style>
     /* == General style === */
     * {
@@ -177,6 +177,32 @@
       -ms-transition: width .4s ease-in-out;
       -o-transition: width .4s ease-in-out;
       transition: width .4s ease-in-out;
+    }
+
+    .search{
+      padding-top: 5px;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      height: 60px;
+      margin: auto;
+      background-color: white;
+      border: 5px solid #e7e7e7;
+      border-radius: 20px;
+      width: 60%;
+      line-height: 50px;
+      opacity: 80%;
+      overflow: hidden;
+    }
+
+    input {
+      width: 100%;
+      border: none;
+      background: transparent;
+      color: orange;
+      font-size: x-large;
+      margin-left: 30px;
     }
   </style>
 </head>
